# zkstream

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
aggsigs/: .gitignore  Cargo.toml  README.md
aggsigs/src/: lib.rs  schemes.rs
aggsigs/src/schemes/: bls.rs
energy/: .gitignore  Cargo.toml  README.md
energy/debs-datajson/: Cargo.toml  README.md
energy/debs-datajson/src/: lib.rs
energy/debs-sensors/: Cargo.toml  README.md  run.sh
energy/debs-sensors/src/: main.rs
energy/lib/datajson/: Cargo.toml
energy/lib/datajson/src/: lib.rs
energy/lib/datajson/test/: data.short.json
energy/lib/hash_sign/: Cargo.toml
energy/lib/hash_sign/src/: hash.rs  sign.rs
energy/sensors-rs/: Cargo.toml  run.sh
energy/sensors-rs/src/: main.rs
energy/zokrates/: .gitignore  Cargo.toml  README.md  run-all.sh
energy/zokrates-debs/: .gitignore  Cargo.toml  Makefile  README.md  parse-log.py  run-all.sh  run-separate-steps.sh  run.sh
energy/zokrates-debs/src/: abi.rs  challenge1.poseidon.nosig.zok  challenge1.poseidon.only.hash-hist.zok  challenge1.poseidon.only.predict.zok  challenge1.poseidon.only.sig-only-hash.zok  challenge1.poseidon.only.sig-only-verify.zok  challenge1.poseidon.only.sig.zok  challenge1.poseidon.zok  challenge1.sha256.nosig.zok  challenge1.sha256.zok  historical.poseidon.nosig.zok  historical.poseidon.zok  historical.sha256.nosig.zok  historical.sha256.zok  input.rs  main.rs  params.rs  proof.rs  verification.rs
energy/zokrates-debs/test/: run.sh  test_eddsa_poseidon.zok
energy/zokrates-flexibility/: .gitignore  Cargo.toml  README.md  parse-log.py  run-all.sh  run.sh
energy/zokrates-flexibility/src/: abi.rs  flexibility.poseidon.nosig.zok  flexibility.poseidon.zok  input.rs  main.rs  params.rs  proof.rs  shared.zok  verification.rs  verifyEddsa.zok
energy/zokrates/src/: challenge1.poseidon.nosig.zok  challenge1.poseidon.only.hash-hist.zok  challenge1.poseidon.only.sig-only-hash.zok  challenge1.poseidon.only.sig.zok  challenge1.poseidon.zok  challenge1.sha256.nosig.zok  historical.poseidon.nosig.zok  historical.poseidon.zok  historical.sha256.nosig.zok  input.rs  main.rs  params.rs  proof.rs  verification.rs  verifyEddsa.zok
energy/zokrates/test/: run.sh
lib/hash_sign/: Cargo.toml  README.md
lib/hash_sign/src/: hash.rs  lib.rs  message.rs  serialize.rs  sign.rs  utils.rs
nexmark/: Cargo.toml  README.md
nexmark/data/: README.md  auctions.json  bids.json  data.json  persons.json
nexmark/lib/datajson/: Cargo.toml
nexmark/lib/datajson/src/: lib.rs  utils.rs
nexmark/lib/datajson/test/: data.short.json
nexmark/lib/hash_sign/src/: hash.rs  lib.rs  sign.rs
nexmark/nexmark-datajson/: Cargo.toml  README.md
nexmark/nexmark-datajson/src/: lib.rs
nexmark/nexmark-datajson/test/: data.short.json
nexmark/nexmark-sensors/: Cargo.toml  README.md  run.sh
nexmark/nexmark-sensors/src/: main.rs
nexmark/sensors-rs/: Cargo.toml  README.md  run.sh
nexmark/sensors-rs/src/: main.rs
nexmark/zokrates-nexmark/: .gitignore  Cargo.toml  README.md  nexmark-queries.md  parse-log.py  run-all.sh  run.sh
nexmark/zokrates-nexmark/src/: abi.rs  gadgets.zok  input.rs  main.rs  nexmark.rs  params.rs  proof.rs  q1.poseidon.nosig.zok  q1.poseidon.zok  q4a.poseidon.nosig.zok  q4a.poseidon.zok  q5a.poseidon.nosig.zok  q5a.poseidon.zok  q5b.poseidon.nosig.zok  q5b.poseidon.zok  q6a.poseidon.nosig.zok  q6a.poseidon.zok  q6b.poseidon.nosig.zok  q6b.poseidon.zok  q7.poseidon.nosig.zok  q7.poseidon.zok  shared.zok  verification.rs  zokrates.rs
zkgadgets/: .gitignore  README.md  gadgets.zok  run.sh
