[workspace]
resolver = "2"
members = [
    "aggsigs",
    "lib/hash_sign",
]

# Always optimize.
# To generate Poseidon hashes this is much faster.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
