[package]
name = "debs-datajson"
version = "1.0.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["arbitrary_precision"] }
chrono = { version = "0.4.24", features = ["alloc", "std", "clock", "serde"] }
hash-sign = { path = "../../lib/hash_sign" }
hex = "0.4.3"
k256 = { version = "0.13", features = ["serde"] }
babyjubjub-rs = { version = "0.0.11" }
# Using the old version of poseidon-rs that is used by babyjubjub-rs.
poseidon-rs = "0.0.8"
# Using the old version of ff_ce that is also used by poseidon-rs.
ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
blst = "0.3.10"
