[package]
name = "hash-sign"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
hex = "0.4.3"
serde_json = { version = "1.0.68", features = ["arbitrary_precision"] }
chrono = { version = "0.4.24", features = ["alloc", "std", "clock", "serde"] }
k256 = { version = "0.13", features = ["serde"] }
sha2 = "0.10.6"
babyjubjub-rs = { version = "0.0.11" }
# Using the old version of poseidon-rs that is used by babyjubjub-rs.
poseidon-rs = "0.0.8"
# Using the old version of ff_ce that is also used by poseidon-rs.
ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
num-bigint = "0.4"
aggsigs = { path = "../../aggsigs" }
blst = "0.3.10"

[dev-dependencies]
chrono = { version = "0.4.24", features = ["alloc", "std", "clock", "serde"] }

